testdata/invalid/leading_zero_int.pr
// Leading zeros in decimal integer.
main() {
  Int x = 0123;
}
